spectec/test/interp/neg/nested-undeclared-in-loop.imp
// A loop body reads a variable that was never declared.
int i = 0;
while i <= 10 do
  i = i + step
end
